core/area_maintenance/css/area_maintenance.less
/**
* area_maintenance
*
* Included from main.less file
*/
.area_maintenance {

	>.content_data {

		h1 {
			line-height: 1em;
		}

		label {
			padding: 0.5em;
		}

		input {
			width: auto;
			height: 2.5em;
			padding: 0.5em;
			margin: 0px;
			margin-top: 0.5em;
			margin-bottom: 0.5em;
			margin-right: 0.5em;
		}

		button {
			border: 1px solid @color_grey_13;
			font-size: 1em;
			color: @color_grey_1;
			margin-bottom: 0.25rem;
		}

		pre {
			margin-top: 0.5rem;
			border-radius: 0.25rem;
		}

		// highlighted_code
		.highlighted_code {
			border-radius: 0.25rem;
		}

		.warning {
			color: @color_warning;
			font-weight: 500;
		}

		.config_grid {
			display: grid;
			grid-template-columns: 1fr 4fr;
			line-height: 1.1rem;
			padding: 0.5rem;
			margin-top: 0.5rem;
			grid-gap: 0.5rem;
			border: 1px solid @color_grey_11;
			border-radius: 4px;

			.value {

			}
		}

		.icon {
			vertical-align: text-bottom;
			cursor: initial;
			height: 1rem;

			&.success {
				background-color: @color_green_success;
			}
		}

		// forms (area thesaurus)
		.form_container {
			padding-top: 1em;

			input {
				width: 100%;

				&.mandatory {
					border-left: 2px solid @color_danger;

					&.empty {
						border-right: 2em solid @color_danger;
					}
				}
			}

			select {
				margin-bottom: 0.5rem;
			}
		}

		@widget_container_heigth: 3.15rem;

		>.widget_container {
			contain: content;
			height: @widget_container_heigth;
			margin: 0.35em;
			flex: 1 1 49%;
			display: flex;
			flex-direction: column;
			overflow: auto;
			background-color: @color_hilite;

			&.loaded {
				height: unset;
			}

			// label
			>.widget_label {
				height: @widget_container_heigth;
				contain: content;
				background-color: @color_hilite;
				transition: background-color 1000ms ease-in-out;
			}

			&.danger {
				>.widget_label {
					background-color: @color_danger;

					&:before {
						display: inline-block;
						content: " ";
						margin-right: 0.5rem;
						line-height: 1rem;
						background-color: #ffffff;
						width: 1rem;
						height: 1rem;
						vertical-align: bottom;

						@icon-path: url(../../themes/default/icons/alert.svg);
						mask-image: @icon-path;
						mask-size: contain;
						mask-repeat: no-repeat;
						mask-position: center;
					}
				}
			}

			&.blue {
				>.widget_label {
					background-color: @color_primary;
				}
				>.widget_body {
					background-color: @color_blue_light;
				}
			}

			&.green {
				>.widget_label {
					background-color: @color_success;
				}
				>.widget_body {
					background-color: @color_green_light;
				}
			}

			&.violet {
				>.widget_label {
					background-color: @color_php;
				}
				>.widget_body {
					background-color: @color_php;
				}
			}

			&.fit {
				>.widget_body {
					padding: 0px;
				}
			}

			// label
			>.widget_label {
				padding: 1em;
				background-color: @color_orange_dedalo;
				color: @color_white;
				text-transform: uppercase;
				letter-spacing: 0.025em;
				user-select: none;
				cursor: pointer;
				position: relative;

				&.icon_arrow {

					&:after {
						margin-right: 0.87rem;
						background-color: @color_white;
					}
				}

				>* {
					pointer-events: none;
				}
			}

			// body
			>.widget_body {
				contain: content;
				padding: 1rem;
				background-color: @color_hilite;
				min-height: 9.5rem;
				flex-grow: 1; // grow vertical to fill
				resize: vertical;
				overflow: auto;
				width: 100%;

				.link {
					cursor: pointer;
					user-select: none;
					padding-bottom: 0.25em;

					&:active {
						opacity: 0.5;
					}
					&:before {
						content: ' ';
						.fn_build_button('arrow-circle-right.svg', @color_grey_3, 1);
						vertical-align: text-bottom;
						padding: 0px;
						margin: 0px;
						margin-right: 0.3em;
						height: 1.2em;
					}
				}

				.body_info {
					font-size: 0.9em;
					color: @color_grey_5;

					h6 {
						font-size: 1.33rem;
						padding: 0.5em;
						padding-left: 0px;
					}

					.alert_update {
						padding: 1.55rem;
						color: @color_danger;
						line-height: 1.7rem;

						// pre reset to allow highlightjs do the work
						pre {
							white-space: pre-line;
							padding-top: 0;
							padding-bottom: 0;

							>code {
								padding-top: 0px;
							}
						}
					}

					.command {
						font-family: Menlo, Monaco, Consolas, 'Courier New', monospace;
						font-size: 0.8rem;
						padding: 0.5em;
						border: 1px solid @color_grey_11;
						background-color: @color_grey_15;
						// display: flex;
						margin-bottom: 0.25em;

						display: grid;
						grid-template-columns: 6rem 3rem auto;
						grid-gap: 0.5rem;

						>.vkey {
							font-size: 3.5em;
							padding: 0.25em;
							position: relative;
							background-color: @color_grey_11;
							min-width: 6rem;
							text-align: right;
						}

						>.checkbox_selector {
							margin-left: 0.5rem;
							margin-right: 0.5rem;
							height: 1rem;
							width: 1rem;
							font-size: 1rem;
							cursor: pointer;
						}

						>.vkey_value {
							padding: 0.5em;
							padding-top: 0.4rem;
							line-height: 1.15rem;
							word-break: break-all;
							white-space: pre-wrap;
						}

						&.disable {
							opacity: 0.8;
							>.vkey {
								opacity: 0.5;
							}
							>.vkey_value {
								opacity: 0.5;
							}
						}
					}
				}//end .body_info

				.body_response {
					position: relative;
					margin: 0px;
					padding: 0px;
					width: 100%;
					max-width: 100%;
					word-break: break-word;

					>* {
						padding: 0.5em;
					}

					.json-container {
						margin-top: 0px;
					}

					.json-value {
						display: block;
						font-family: monospace;
						white-space: pre;
					}

					.api_response {
						line-height: 1.2rem;
						font-size: 1rem;
						padding-top: 1rem;
						padding-bottom: 1rem;
					}

					&.preload {
						min-height: 3em;

						>* {
							opacity: 0.3;
						}
					}

					h3.warning {
						white-space: pre-line;
						line-height: 1.2em;
					}

					.spinner {
						position: relative;
						margin-top: 1rem;
						margin-bottom: 1rem;
					}

					.error {
						margin-top: 0.5rem;
						margin-bottom: 0.5rem;
						border-radius: 4px;
						padding: 1rem;
						line-height: 1.3rem;
						font-size: 1rem;
					}

					// button eraser
					.eraser {
						position: absolute;
						right: 1rem;
						top: 1rem;
						z-index: 1;
					}
				}//end .body_response
			}//end .widget_body

			// generic styles
			.info_text {
				line-height: 1.5rem;

				&.light {
					opacity: 0.6;
					margin-left: 1rem;
				}
			}
			.comment {
				color: @color_grey_7;
			}

		}//end .widget_container

	}//end .content_data

}//end .area_maintenance


// widgets import
	@import (once) '../widgets/add_hierarchy/css/add_hierarchy';
	@import (once) '../widgets/build_database_version/css/build_database_version';
	@import (once) '../widgets/check_config/css/check_config';
	@import (once) '../widgets/counters_status/css/counters_status';
	@import (once) '../widgets/database_info/css/database_info';
	@import (once) '../widgets/dedalo_api_test_environment/css/dedalo_api_test_environment';
	@import (once) '../widgets/lock_components/css/lock_components';
	@import (once) '../widgets/make_backup/css/make_backup';
	@import (once) '../widgets/move_tld/css/move_tld';
	@import (once) '../widgets/move_to_portal/css/move_to_portal';
	@import (once) '../widgets/move_to_table/css/move_to_table';
	@import (once) '../widgets/move_locator/css/move_locator';
	@import (once) '../widgets/move_lang/css/move_lang';
	@import (once) '../widgets/php_info/css/php_info';
	@import (once) '../widgets/register_tools/css/register_tools';
	@import (once) '../widgets/sqo_test_environment/css/sqo_test_environment';
	@import (once) '../widgets/system_info/css/system_info';
	@import (once) '../widgets/unit_test/css/unit_test';
	@import (once) '../widgets/update_ontology/css/update_ontology';
	@import (once) '../widgets/update_code/css/update_code';

